syntax = "proto3";

package vingurzhou.checkers.checkers;

option go_package = "github.com/Vingurzhou/checkers/x/checkers/types";

// Msg defines the Msg service.
service Msg {
  rpc CreateGame (MsgCreateGame) returns (MsgCreateGameResponse);
}
message MsgCreateGame {
  string creator = 1;
  string black   = 2;
  string red     = 3;
}

message MsgCreateGameResponse {
  string gameIndex = 1;
}

